2003-08-25  Marco Pesenti Gritti  <marco@gnome.org>

	* gnome-vfs.keys.in:

	Make epiphany default handler for text/html.

2003-08-20  Luis Villa <louie@ximian.com>

	* gnome-vfs.applications: add epiphany, based on galeon entry

2003-08-18  Luis Villa <louie@ximian.com>

	* gnome-vfs.mime: add 'mrproject' extension for mrproject files
	* gnome-vfs.keys.in: make epiphany and galeon preferred over
	mozilla where appropriate
	* gnome-vfs.keys.in: fix tabbing of x-javascript entry. Left lack
	of translation because of string freeze.

2003-08-13  Christian Neumair  <chris@gnome-de.org>

	* gnome-vfs.applications: Use AbiWord 2.0 executable.
	* gnome-vfs.keys.in: Make Wine the default application for MS DOS
	executables.

2003-08-07  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* configure.in: 2.3.1 is out

2003-07-28  Mark McLoughlin  <mark@skynet.ie>

	* gnome-vfs.keys.in: make the default action for pdf to use
	the gpdf embedded viewer.

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* AUTHORS: spell my name properly
	* gnome-vfs.applications: added a vim application, changed the default
	command for gvim and vim to set the current directory to the directory
	the file is in (Closes: #114792)
	* gnome-vfs.keys.in: added vim as an option before plain vi

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: Patch from Hidetoshi Tajima
	<hidetoshi.tajima@sun.com> to avoid duplicate Audio and Images entries
	in gnome-file-types-properties (Closes: #113938)

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added application/x-bzip2 mimetype (blame
	Sourceforge) (Closes: #117087), removed guitar as a possible handler,
	it's dead

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added blend and BLEND as possible suffixes for
	Blender files (Closes: #118024)

2003-07-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: