@@ -71,6 +71,15 @@ emacs
 	requires_terminal=false
 	mime_types=text/*,text/html,text/plain,text/x-c,text/x-c++,text/x-c-header,text/x-perl
 
+eog
+	command=eog
+	name=Eye of Gnome
+	can_open_multiple_files=true
+	expects_uris=true
+	uses_gnomevfs=true
+	requires_terminal=false
+	mime_types=image/bmp,image/gif,image/jpeg,image/png,image/tiff,image/x-xpixmap,image/x-bmp,image/x-png,image/x-portable-anymap,image/x-portable-bitmap,image/x-portable-graymap,image/x-portable-pixmap
+
 epiphany
 	command=epiphany
 	name=Epiphany
@@ -80,15 +89,6 @@ epiphany
 	requires_terminal=false
 	supported_uri_schemes=file,http,ftp
 	mime_types=text/html,x-directory/webdav,x-directory/webdav-prefer-directory,image/gif,image/jpeg
-
-eog
-	command=eog
-	name=Eye of Gnome
-	can_open_multiple_files=true
-	expects_uris=true
-	uses_gnomevfs=true
-	requires_terminal=false
-	mime_types=image/bmp,image/gif,image/jpeg,image/png,image/tiff,image/x-xpixmap,image/x-bmp,image/x-png,image/x-portable-anymap,image/x-portable-bitmap,image/x-portable-graymap,image/x-portable-pixmap
 
 file-roller
 	command=file-roller
