@@ -1409,7 +1409,15 @@ image/x-icb
 
 image/x-ico
 	_description=Windows icon image
+	default_action_type=component
 	_category=Images
+	short_list_component_iids=OAFIID:GNOME_EOG_Control
+	short_list_component_iids_for_novice_user_level=OAFIID:GNOME_EOG_Control
+	short_list_component_iids_for_intermediate_user_level=OAFIID:GNOME_EOG_Control
+	short_list_component_iids_for_advanced_user_level=OAFIID:GNOME_EOG_Control
+	short_list_application_ids_for_novice_user_level=eog
+	short_list_application_ids_for_intermediate_user_level=eog
+	short_list_application_ids_for_advanced_user_level=eog
 
 image/x-iff
 	_description=IFF image
@@ -1719,7 +1727,6 @@ text/enriched
 text/html
 	_description=HTML page
 	default_action_type=application
-	default_application_id=epiphany
 	short_list_component_iids=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:Nautilus_Text_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:nautilus_text_view:fa466311-17c1-435c-8231-c9fc434b6437
 	short_list_component_iids_for_intermediate_user_level=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:nautilus_text_view:fa466311-17c1-435c-8231-c9fc434b6437
@@ -1892,7 +1899,7 @@ text/x-javascript
 	short_list_application_ids_for_novice_user_level=anjuta
 	short_list_application_ids_for_intermediate_user_level=anjuta
 	short_list_application_ids_for_advanced_user_level=anjuta
-	category=Software Development/Source Code
+	_category=Software Development/Source Code
 	use_category_default=yes
 
 text/x-ksh
